[project]
name = 'lanzonesscan'
version = '0.1.0'
description = 'YOLOv8-based lanzones leaf condition detection API'
requires-python = '>=3.11'
dependencies = [
	'ultralytics>=8.4',
	'fastapi>=0.110',
	'uvicorn[standard]>=0.27',
	'python-multipart>=0.0.9',
	'pillow>=10.0',
	'pydantic>=2.0',
	'PyJWT>=2.8',
	'slowapi>=0.1.9'
]

[project.optional-dependencies]
dev = [
	'pytest>=8.0',
	'httpx>=0.27'
]

[build-system]
requires = ['setuptools>=61']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['src']

[tool.pytest.ini_options]
testpaths = ['tests']
pythonpath = ['src']
