[project]
name = 'lanzonesscan'
version = '0.1.0'
description = 'YOLOv8-based lanzones leaf condition detection API'
requires-python = '>=3.11'
dependencies = [
	'ultralytics>=8.4.38',
	'fastapi>=0.136.0',
	'uvicorn[standard]>=0.44.0',
	'python-multipart>=0.0.26',
	'pillow>=12.2.0',
	'pydantic>=2.13.2',
	'PyJWT>=2.12.1',
	'slowapi>=0.1.9'
]

[project.optional-dependencies]
dev = [
	'pytest>=9.0.3',
	'httpx>=0.28.1'
]

[build-system]
requires = ['setuptools>=61']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['src']

[tool.pytest.ini_options]
testpaths = ['tests']
pythonpath = ['src']
